--- a/assets/scss/assets/_slider.scss
+++ b/assets/scss/assets/_slider.scss
@@ -92,11 +92,34 @@
 
 
 
+
+
 .image-format {
   width: auto;
   height: 100%;
   max-width: 294px;
   max-height: 232px;
+
+
+  @media (min-width: 768px) {
+    max-height: 329px;
+    max-width: 418px;
+  }
+
+  @media (min-width: 768px) {
+    max-height: 600px;
+    max-width: 600px;
+  }
+
+  @media (min-width: 1280px) {
+    max-height: 484px;
+    max-width: 604px;
+  }
+}
+
+.image-format-two {
+  width: auto;
+  height: 100%;
 
 
   @media (min-width: 768px) {
@@ -326,6 +349,44 @@
 
     &.swiper-pagination-bullet-active {
       background-color: #fff;
+    }
+  }
+}
+
+
+.swiper-button-next-fototwo {
+  position: absolute;
+  right: 40px;
+  bottom: 0px;
+  left: unset;
+  z-index: 100;
+
+  &:after {
+    content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="39.603" height="35.557" viewBox="0 0 39.603 35.557"><g id="Pijl_wit" data-name="Pijl wit" transform="translate(1.5 2.317)"><line id="Line_35" data-name="Line 35" x2="33.419" transform="translate(0 15.461)" fill="none" stroke="%230A1F16" stroke-linecap="round" stroke-width="3"/><line id="Line_36" data-name="Line 36" x2="19.921" y2="1.945" transform="translate(21.699) rotate(45)" fill="none" stroke="%230A1F16" stroke-linecap="round" stroke-width="3"/><line id="Line_37" data-name="Line 37" y1="1.945" x2="19.921" transform="translate(35.785 16.836) rotate(135)" fill="none" stroke="%230A1F16" stroke-linecap="round" stroke-width="3"/></g></svg>');
+  }
+
+  @media (max-width: 767px) {
+    &:after {
+      content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="17.5" height="14.68" viewBox="0 0 39.603 35.557"><g id="Pijl_wit" data-name="Pijl wit" transform="translate(1.5 2.317)"><line id="Line_35" data-name="Line 35" x2="33.419" transform="translate(0 15.461)" fill="none" stroke="%230A1F16" stroke-linecap="round" stroke-width="3" /><line id="Line_36" data-name="Line 36" x2="19.921" y2="1.945" transform="translate(21.699) rotate(45)" fill="none" stroke="%230A1F16" stroke-linecap="round" stroke-width="3" /><line id="Line_37" data-name="Line 37" y1="1.945" x2="19.921" transform="translate(35.785 16.836) rotate(135)" fill="none" stroke="%230A1F16" stroke-linecap="round" stroke-width="3" /></g></svg>');
+    }
+  }
+}
+
+.swiper-button-prev-fototwo {
+  position: absolute;
+  left: 40px;
+  bottom: 0px;
+  right: unset;
+  z-index: 100;
+
+  &:after {
+    content: \url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="39.603" height="35.557" viewBox="0 0 39.603 35.557"><g id="Pijl_wit" data-name="Pijl wit" transform="translate(38.103 33.24) rotate(180)"><line id="Line_35" data-name="Line 35" x2="33.419" transform="translate(0 15.461)" fill="none" stroke="%230A1F16" stroke-linecap="round" stroke-width="3"/><line id="Line_36" data-name="Line 36" x2="19.921" y2="1.945" transform="translate(21.699) rotate(45)" fill="none" stroke="%230A1F16" stroke-linecap="round" stroke-width="3"/><line id="Line_37" data-name="Line 37" y1="1.945" x2="19.921" transform="translate(35.785 16.836) rotate(135)" fill="none" stroke="%230A1F16" stroke-linecap="round" stroke-width="3"/></g></svg>');
+
+  }
+
+  @media (max-width: 767px) {
+    &:after {
+      content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="17.5" height="14.68" viewBox="0 0 39.603 35.557"><g id="Pijl_wit" data-name="Pijl wit" transform="translate(38.103 33.24) rotate(180)"><line id="Line_35" data-name="Line 35" x2="33.419" transform="translate(0 15.461)" fill="none" stroke="%230A1F16" stroke-linecap="round" stroke-width="3" /><line id="Line_36" data-name="Line 36" x2="19.921" y2="1.945" transform="translate(21.699) rotate(45)" fill="none" stroke="%230A1F16" stroke-linecap="round" stroke-width="3" /><line id="Line_37" data-name="Line 37" y1="1.945" x2="19.921" transform="translate(35.785 16.836) rotate(135)" fill="none" stroke="%230A1F16" stroke-linecap="round" stroke-width="3" /></g></svg>');
     }
   }
 }
