--- a/assets/scss/assets/_acf.scss
+++ b/assets/scss/assets/_acf.scss
@@ -14,25 +14,7 @@
         margin-right: 8px !important;
     }
 
-    // .media-modal .imgedit-wrap .imgedit-settings {
-
-    //     display: none !important;
-    // }
-
-    // .imgedit-crop-wrap {
-    //     padding: 20px;
-    //     background-image: linear-gradient(45deg, #c3c4c7 25%, transparent 25%, transparent 75%, #c3c4c7 75%, #c3c4c7), linear-gradient(45deg, #c3c4c7 25%, transparent 25%, transparent 75%, #c3c4c7 75%, #c3c4c7);
-    //     background-position: 0 0, 10px 10px;
-    //     background-size: 20px 20px;
-    // }
-
-    // .media-modal .imgedit-wrap .imgedit-panel-content {
-
-    //     position: unset !important;
-
-    // }
-
-    // .imgedit-submit {
-    //     margin: 0px 0 0 !important;
-    // }
+    #product_labeldiv {
+        display: none !important;
+    }
 }
