--- a/tailwindcss-styles/style.css
+++ b/tailwindcss-styles/style.css
@@ -678,6 +678,15 @@ video {
 .top-\[unset\] {
   top: unset;
 }
+.left-\[4px\] {
+  left: 4px;
+}
+.right-\[4px\] {
+  right: 4px;
+}
+.bottom-\[4px\] {
+  bottom: 4px;
+}
 .-z-10 {
   z-index: -10;
 }
@@ -1108,6 +1117,9 @@ video {
 .h-screen {
   height: 100vh;
 }
+.h-\[25px\] {
+  height: 25px;
+}
 .max-h-\[314px\] {
   max-height: 314px;
 }
@@ -1259,6 +1271,18 @@ video {
 }
 .w-screen {
   width: 100vw;
+}
+.w-\[45px\] {
+  width: 45px;
+}
+.w-\[20px\] {
+  width: 20px;
+}
+.w-\[25px\] {
+  width: 25px;
+}
+.w-\[30px\] {
+  width: 30px;
 }
 .min-w-\[41px\] {
   min-width: 41px;
@@ -1433,6 +1457,16 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(15px * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(15px * var(--tw-space-y-reverse));
+}
+.space-x-\[8px\] > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(8px * var(--tw-space-x-reverse));
+  margin-left: calc(8px * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-x-\[4px\] > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(4px * var(--tw-space-x-reverse));
+  margin-left: calc(4px * calc(1 - var(--tw-space-x-reverse)));
 }
 .overflow-hidden {
   overflow: hidden;
@@ -2352,6 +2386,30 @@ video {
     top: 150px;
   }
 
+  .md\:bottom-\[4px\] {
+    bottom: 4px;
+  }
+
+  .md\:left-\[4px\] {
+    left: 4px;
+  }
+
+  .md\:right-\[4px\] {
+    right: 4px;
+  }
+
+  .md\:bottom-\[6px\] {
+    bottom: 6px;
+  }
+
+  .md\:left-\[6px\] {
+    left: 6px;
+  }
+
+  .md\:right-\[6px\] {
+    right: 6px;
+  }
+
   .md\:order-1 {
     order: 1;
   }
@@ -2519,6 +2577,10 @@ video {
     height: auto;
   }
 
+  .md\:h-\[35px\] {
+    height: 35px;
+  }
+
   .md\:max-h-\[371px\] {
     max-height: 371px;
   }
@@ -2593,6 +2655,10 @@ video {
 
   .md\:w-\[76px\] {
     width: 76px;
+  }
+
+  .md\:w-\[35px\] {
+    width: 35px;
   }
 
   .md\:max-w-\[202px\] {
@@ -2675,6 +2741,12 @@ video {
     --tw-space-x-reverse: 0;
     margin-right: calc(30px * var(--tw-space-x-reverse));
     margin-left: calc(30px * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .md\:space-x-\[6px\] > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(6px * var(--tw-space-x-reverse));
+    margin-left: calc(6px * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .md\:border-\[15px\] {
@@ -3087,6 +3159,10 @@ video {
     height: calc(100dvh - 33px);
   }
 
+  .lg\:h-\[45px\] {
+    height: 45px;
+  }
+
   .lg\:max-h-\[294px\] {
     max-height: 294px;
   }
@@ -3197,6 +3273,10 @@ video {
 
   .lg\:w-\[95px\] {
     width: 95px;
+  }
+
+  .lg\:w-\[45px\] {
+    width: 45px;
   }
 
   .lg\:max-w-\[1145px\] {
@@ -3328,6 +3408,12 @@ video {
     --tw-space-x-reverse: 0;
     margin-right: calc(30px * var(--tw-space-x-reverse));
     margin-left: calc(30px * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .lg\:space-x-\[8px\] > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(8px * var(--tw-space-x-reverse));
+    margin-left: calc(8px * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .lg\:overflow-y-auto {
