--- a/tailwindcss-styles/style.css
+++ b/tailwindcss-styles/style.css
@@ -1353,6 +1353,9 @@ video {
 .flex-col {
   flex-direction: column;
 }
+.flex-wrap {
+  flex-wrap: wrap;
+}
 .content-start {
   align-content: flex-start;
 }
