--- a/assets/scss/assets/_woocommerce.scss
+++ b/assets/scss/assets/_woocommerce.scss
@@ -1228,5 +1228,6 @@ body .wpc-filter-chips-list li.wpc-filter-chip:not(.wpc-chip-reset-all) a {
         height: 62px !important;
         padding-left: 20px !important;
         padding-right: 20px !important;
+        width: 100% !important;
     }
 }
