--- a/assets/scss/assets/_form.scss
+++ b/assets/scss/assets/_form.scss
@@ -141,6 +141,7 @@ input[type=number] {
     input,
     textarea {
         min-height: 46px !important;
+        width: 100% !important;
         padding-left: 20px !important;
         font-size: 16px !important;
         font-family: Karlsen, sans-serif !important;
