--- a/assets/scss/assets/_algemeen.scss
+++ b/assets/scss/assets/_algemeen.scss
@@ -288,6 +288,292 @@ html {
   }
 }
 
+// NIEUWE KLEUREN
+
+.bg-freeks-darkgrey {
+  background: #111111;
+
+  .text-color {
+    color: #fff;
+  }
+}
+
+.bg-freeks-deepgrey {
+  background: #393939;
+
+  .text-color {
+    color: #fff;
+  }
+}
+
+.bg-freeks-basicgrey {
+  background: #56565A;
+
+  .text-color {
+    color: #fff;
+  }
+}
+
+.bg-freeks-lightgrey {
+  background: #A0A0A0;
+
+  .text-color {
+    color: #0A1F16;
+  }
+}
+
+.bg-freeks-brightgrey {
+  background: #D6D6D6;
+
+  .text-color {
+    color: #0A1F16;
+  }
+}
+
+.bg-freeks-darkblue {
+  background: #00263E;
+
+  .text-color {
+    color: #fff;
+  }
+}
+
+.bg-freeks-deepblue {
+  background: #0071CE;
+
+  .text-color {
+    color: #fff;
+  }
+}
+
+.bg-freeks-basicblue {
+  background: #3CB4E5;
+
+  .text-color {
+    color: #0A1F16;
+  }
+}
+
+.bg-freeks-lightblue {
+  background: #83D2E5;
+
+  .text-color {
+    color: #0A1F16;
+  }
+}
+
+.bg-freeks-brightblue {
+  background: #B9DBE5;
+
+  .text-color {
+    color: #0A1F16;
+  }
+}
+
+.bg-freeks-darkturquoise {
+  background: #073135;
+
+  .text-color {
+    color: #fff;
+  }
+}
+
+.bg-freeks-deepturquoise {
+  background: #006072;
+
+  .text-color {
+    color: #fff;
+  }
+}
+
+.bg-freeks-basicturquoise {
+  background: #00BBB4;
+
+  .text-color {
+    color: #fff;
+  }
+}
+
+.bg-freeks-lightturquoise {
+  background: #69C2C0;
+
+  .text-color {
+    color: #0A1F16;
+  }
+}
+
+.bg-freeks-brightturquoise {
+  background: #A0D9D9;
+
+  .text-color {
+    color: #0A1F16;
+  }
+}
+
+.bg-freeks-darkevergreen {
+  background: #004D41;
+
+  .text-color {
+    color: #fff;
+  }
+}
+
+.bg-freeks-deepevergreen {
+  background: #006A5B;
+
+  .text-color {
+    color: #fff;
+  }
+}
+
+.bg-freeks-basicevergreen {
+  background: #2E9970;
+
+  .text-color {
+    color: #fff;
+  }
+}
+
+.bg-freeks-lightevergreen {
+  background: #76B891;
+
+  .text-color {
+    color: #0A1F16;
+  }
+}
+
+.bg-freeks-brightevergreen {
+  background: #AADA91;
+
+  .text-color {
+    color: #0A1F16;
+  }
+}
+
+.bg-freeks-darkgreen {
+  background: #1A5632;
+
+  .text-color {
+    color: #fff;
+  }
+}
+
+.bg-freeks-deepgreen {
+  background: #3F873F;
+
+  .text-color {
+    color: #fff;
+  }
+}
+
+.bg-freeks-basicgreen {
+  background: #7FC844;
+
+  .text-color {
+    color: #0A1F16;
+  }
+}
+
+.bg-freeks-lightgreen {
+  background: #BED630;
+
+  .text-color {
+    color: #0A1F16;
+  }
+}
+
+.bg-freeks-brightgreen {
+  background: #D8DD57;
+
+  .text-color {
+    color: #0A1F16;
+  }
+}
+
+.bg-freeks-darkred {
+  background: #88171A;
+
+  .text-color {
+    color: #fff;
+  }
+}
+
+.bg-freeks-deepred {
+  background: #EA0029;
+
+  .text-color {
+    color: #fff;
+  }
+}
+
+.bg-freeks-basicred {
+  background: #FF4D00;
+
+  .text-color {
+    color: #fff;
+  }
+}
+
+.bg-freeks-lightred {
+  background: #FF9015;
+
+  .text-color {
+    color: #0A1F16;
+  }
+}
+
+.bg-freeks-brightred {
+  background: #FCBF90;
+
+  .text-color {
+    color: #0A1F16;
+  }
+}
+
+.bg-freeks-darkbrown {
+  background: #3C2419;
+
+  .text-color {
+    color: #fff;
+  }
+}
+
+.bg-freeks-deepbrown {
+  background: #503629;
+
+  .text-color {
+    color: #fff;
+  }
+}
+
+.bg-freeks-basicbrown {
+  background: #804C3B;
+
+  .text-color {
+    color: #fff;
+  }
+}
+
+.bg-freeks-lightbrown {
+  background: #95785E;
+
+  .text-color {
+    color: #fff;
+  }
+}
+
+.bg-freeks-brightbrown {
+  background: #D9C79E;
+
+  .text-color {
+    color: #0A1F16;
+  }
+}
+
+
+// EINDE NIEUWE KLEUREN
+
+
 
 .uitgelicht {
 
@@ -334,6 +620,296 @@ html {
       color: #0A1F16 !important;
     }
   }
+
+  // NIEUWE KLEUREN
+
+  .bg-freeks-darkgrey {
+    background: #111111;
+
+    .text-color {
+      color: #fff;
+    }
+  }
+
+  .bg-freeks-deepgrey {
+    background: #393939;
+
+    .text-color {
+      color: #fff;
+    }
+  }
+
+  .bg-freeks-basicgrey {
+    background: #56565A;
+
+    .text-color {
+      color: #fff;
+    }
+  }
+
+  .bg-freeks-lightgrey {
+    background: #A0A0A0;
+
+    .text-color {
+      color: #0A1F16;
+    }
+  }
+
+  .bg-freeks-brightgrey {
+    background: #D6D6D6;
+
+    .text-color {
+      color: #0A1F16;
+    }
+  }
+
+  .bg-freeks-darkblue {
+    background: #00263E;
+
+    .text-color {
+      color: #fff;
+    }
+  }
+
+  .bg-freeks-deepblue {
+    background: #0071CE;
+
+    .text-color {
+      color: #fff;
+    }
+  }
+
+  .bg-freeks-basicblue {
+    background: #3CB4E5;
+
+    .text-color {
+      color: #0A1F16;
+    }
+  }
+
+  .bg-freeks-lightblue {
+    background: #83D2E5;
+
+    .text-color {
+      color: #0A1F16;
+    }
+  }
+
+  .bg-freeks-brightblue {
+    background: #B9DBE5;
+
+    .text-color {
+      color: #0A1F16;
+    }
+  }
+
+  .bg-freeks-darkturquoise {
+    background: #073135;
+
+    .text-color {
+      color: #fff;
+    }
+  }
+
+  .bg-freeks-deepturquoise {
+    background: #006072;
+
+    .text-color {
+      color: #fff;
+    }
+  }
+
+  .bg-freeks-basicturquoise {
+    background: #00BBB4;
+
+    .text-color {
+      color: #fff;
+    }
+  }
+
+  .bg-freeks-lightturquoise {
+    background: #69C2C0;
+
+    .text-color {
+      color: #0A1F16;
+    }
+  }
+
+  .bg-freeks-brightturquoise {
+    background: #A0D9D9;
+
+    .text-color {
+      color: #0A1F16;
+    }
+  }
+
+  .bg-freeks-darkevergreen {
+    background: #004D41;
+
+    .text-color {
+      color: #fff;
+    }
+  }
+
+  .bg-freeks-deepevergreen {
+    background: #006A5B;
+
+    .text-color {
+      color: #fff;
+    }
+  }
+
+  .bg-freeks-basicevergreen {
+    background: #2E9970;
+
+    .text-color {
+      color: #fff;
+    }
+  }
+
+  .bg-freeks-lightevergreen {
+    background: #76B891;
+
+    .text-color {
+      color: #0A1F16;
+    }
+  }
+
+  .bg-freeks-brightevergreen {
+    background: #AADA91;
+
+    .text-color {
+      color: #0A1F16;
+    }
+  }
+
+  .bg-freeks-darkgreen {
+    background: #1A5632;
+
+    .text-color {
+      color: #fff;
+    }
+  }
+
+  .bg-freeks-deepgreen {
+    background: #3F873F;
+
+    .text-color {
+      color: #fff;
+    }
+  }
+
+  .bg-freeks-basicgreen {
+    background: #7FC844;
+
+    .text-color {
+      color: #0A1F16;
+    }
+  }
+
+  .bg-freeks-lightgreen {
+    background: #BED630;
+
+    .text-color {
+      color: #0A1F16;
+    }
+  }
+
+  .bg-freeks-brightgreen {
+    background: #D8DD57;
+
+    .text-color {
+      color: #0A1F16;
+    }
+  }
+
+  .bg-freeks-darkred {
+    background: #88171A;
+
+    .text-color {
+      color: #fff;
+    }
+  }
+
+  .bg-freeks-deepred {
+    background: #EA0029;
+
+    .text-color {
+      color: #fff;
+    }
+  }
+
+  .bg-freeks-basicred {
+    background: #FF4D00;
+
+    .text-color {
+      color: #fff;
+    }
+  }
+
+  .bg-freeks-lightred {
+    background: #FF9015;
+
+    .text-color {
+      color: #0A1F16;
+    }
+  }
+
+  .bg-freeks-brightred {
+    background: #FCBF90;
+
+    .text-color {
+      color: #0A1F16;
+    }
+  }
+
+  .bg-freeks-darkbrown {
+    background: #3C2419;
+
+    .text-color {
+      color: #fff;
+    }
+  }
+
+  .bg-freeks-deepbrown {
+    background: #503629;
+
+    .text-color {
+      color: #fff;
+    }
+  }
+
+  .bg-freeks-basicbrown {
+    background: #804C3B;
+
+    .text-color {
+      color: #fff;
+    }
+  }
+
+  .bg-freeks-lightbrown {
+    background: #95785E;
+
+    .text-color {
+      color: #fff;
+    }
+  }
+
+  .bg-freeks-brightbrown {
+    background: #D9C79E;
+
+    .text-color {
+      color: #0A1F16;
+    }
+  }
+
+
+  // EINDE NIEUWE KLEUREN
+
+
+
+
+
 }
 
 
