--- a/assets/scss/assets/_algemeen.scss
+++ b/assets/scss/assets/_algemeen.scss
@@ -294,7 +294,7 @@ html {
   background: #111111;
 
   .text-color {
-    color: #fff;
+    color: #fff !important;
   }
 }
 
@@ -302,7 +302,7 @@ html {
   background: #393939;
 
   .text-color {
-    color: #fff;
+    color: #fff !important;
   }
 }
 
@@ -310,7 +310,7 @@ html {
   background: #56565A;
 
   .text-color {
-    color: #fff;
+    color: #fff !important;
   }
 }
 
@@ -318,7 +318,7 @@ html {
   background: #A0A0A0;
 
   .text-color {
-    color: #0A1F16;
+    color: #0A1F16 !important;
   }
 }
 
@@ -326,7 +326,7 @@ html {
   background: #D6D6D6;
 
   .text-color {
-    color: #0A1F16;
+    color: #0A1F16 !important;
   }
 }
 
@@ -334,7 +334,7 @@ html {
   background: #00263E;
 
   .text-color {
-    color: #fff;
+    color: #fff !important;
   }
 }
 
@@ -342,7 +342,7 @@ html {
   background: #0071CE;
 
   .text-color {
-    color: #fff;
+    color: #fff !important;
   }
 }
 
@@ -350,7 +350,7 @@ html {
   background: #3CB4E5;
 
   .text-color {
-    color: #0A1F16;
+    color: #0A1F16 !important;
   }
 }
 
@@ -358,7 +358,7 @@ html {
   background: #83D2E5;
 
   .text-color {
-    color: #0A1F16;
+    color: #0A1F16 !important;
   }
 }
 
@@ -366,7 +366,7 @@ html {
   background: #B9DBE5;
 
   .text-color {
-    color: #0A1F16;
+    color: #0A1F16 !important;
   }
 }
 
@@ -374,7 +374,7 @@ html {
   background: #073135;
 
   .text-color {
-    color: #fff;
+    color: #fff !important;
   }
 }
 
@@ -382,7 +382,7 @@ html {
   background: #006072;
 
   .text-color {
-    color: #fff;
+    color: #fff !important;
   }
 }
 
@@ -390,7 +390,7 @@ html {
   background: #00BBB4;
 
   .text-color {
-    color: #fff;
+    color: #fff !important;
   }
 }
 
@@ -398,7 +398,7 @@ html {
   background: #69C2C0;
 
   .text-color {
-    color: #0A1F16;
+    color: #0A1F16 !important;
   }
 }
 
@@ -406,7 +406,7 @@ html {
   background: #A0D9D9;
 
   .text-color {
-    color: #0A1F16;
+    color: #0A1F16 !important;
   }
 }
 
@@ -414,7 +414,7 @@ html {
   background: #004D41;
 
   .text-color {
-    color: #fff;
+    color: #fff !important;
   }
 }
 
@@ -422,7 +422,7 @@ html {
   background: #006A5B;
 
   .text-color {
-    color: #fff;
+    color: #fff !important;
   }
 }
 
@@ -430,7 +430,7 @@ html {
   background: #2E9970;
 
   .text-color {
-    color: #fff;
+    color: #fff !important;
   }
 }
 
@@ -438,7 +438,7 @@ html {
   background: #76B891;
 
   .text-color {
-    color: #0A1F16;
+    color: #0A1F16 !important;
   }
 }
 
@@ -446,7 +446,7 @@ html {
   background: #AADA91;
 
   .text-color {
-    color: #0A1F16;
+    color: #0A1F16 !important;
   }
 }
 
@@ -454,7 +454,7 @@ html {
   background: #1A5632;
 
   .text-color {
-    color: #fff;
+    color: #fff !important;
   }
 }
 
@@ -462,7 +462,7 @@ html {
   background: #3F873F;
 
   .text-color {
-    color: #fff;
+    color: #fff !important;
   }
 }
 
@@ -470,7 +470,7 @@ html {
   background: #7FC844;
 
   .text-color {
-    color: #0A1F16;
+    color: #0A1F16 !important;
   }
 }
 
@@ -478,7 +478,7 @@ html {
   background: #BED630;
 
   .text-color {
-    color: #0A1F16;
+    color: #0A1F16 !important;
   }
 }
 
@@ -486,7 +486,7 @@ html {
   background: #D8DD57;
 
   .text-color {
-    color: #0A1F16;
+    color: #0A1F16 !important;
   }
 }
 
@@ -494,7 +494,7 @@ html {
   background: #88171A;
 
   .text-color {
-    color: #fff;
+    color: #fff !important;
   }
 }
 
@@ -502,7 +502,7 @@ html {
   background: #EA0029;
 
   .text-color {
-    color: #fff;
+    color: #fff !important;
   }
 }
 
@@ -510,7 +510,7 @@ html {
   background: #FF4D00;
 
   .text-color {
-    color: #fff;
+    color: #fff !important;
   }
 }
 
@@ -518,7 +518,7 @@ html {
   background: #FF9015;
 
   .text-color {
-    color: #0A1F16;
+    color: #0A1F16 !important;
   }
 }
 
@@ -526,7 +526,7 @@ html {
   background: #FCBF90;
 
   .text-color {
-    color: #0A1F16;
+    color: #0A1F16 !important;
   }
 }
 
@@ -534,7 +534,7 @@ html {
   background: #3C2419;
 
   .text-color {
-    color: #fff;
+    color: #fff !important;
   }
 }
 
@@ -542,7 +542,7 @@ html {
   background: #503629;
 
   .text-color {
-    color: #fff;
+    color: #fff !important;
   }
 }
 
@@ -550,7 +550,7 @@ html {
   background: #804C3B;
 
   .text-color {
-    color: #fff;
+    color: #fff !important;
   }
 }
 
@@ -558,7 +558,7 @@ html {
   background: #95785E;
 
   .text-color {
-    color: #fff;
+    color: #fff !important;
   }
 }
 
@@ -566,13 +566,12 @@ html {
   background: #D9C79E;
 
   .text-color {
-    color: #0A1F16;
+    color: #0A1F16 !important;
   }
 }
 
 
 // EINDE NIEUWE KLEUREN
-
 
 
 .uitgelicht {
@@ -627,7 +626,7 @@ html {
     background: #111111;
 
     .text-color {
-      color: #fff;
+      color: #fff !important;
     }
   }
 
@@ -635,7 +634,7 @@ html {
     background: #393939;
 
     .text-color {
-      color: #fff;
+      color: #fff !important;
     }
   }
 
@@ -643,7 +642,7 @@ html {
     background: #56565A;
 
     .text-color {
-      color: #fff;
+      color: #fff !important;
     }
   }
 
@@ -651,7 +650,7 @@ html {
     background: #A0A0A0;
 
     .text-color {
-      color: #0A1F16;
+      color: #0A1F16 !important;
     }
   }
 
@@ -659,7 +658,7 @@ html {
     background: #D6D6D6;
 
     .text-color {
-      color: #0A1F16;
+      color: #0A1F16 !important;
     }
   }
 
@@ -667,7 +666,7 @@ html {
     background: #00263E;
 
     .text-color {
-      color: #fff;
+      color: #fff !important;
     }
   }
 
@@ -675,7 +674,7 @@ html {
     background: #0071CE;
 
     .text-color {
-      color: #fff;
+      color: #fff !important;
     }
   }
 
@@ -683,7 +682,7 @@ html {
     background: #3CB4E5;
 
     .text-color {
-      color: #0A1F16;
+      color: #0A1F16 !important;
     }
   }
 
@@ -691,7 +690,7 @@ html {
     background: #83D2E5;
 
     .text-color {
-      color: #0A1F16;
+      color: #0A1F16 !important;
     }
   }
 
@@ -699,7 +698,7 @@ html {
     background: #B9DBE5;
 
     .text-color {
-      color: #0A1F16;
+      color: #0A1F16 !important;
     }
   }
 
@@ -707,7 +706,7 @@ html {
     background: #073135;
 
     .text-color {
-      color: #fff;
+      color: #fff !important;
     }
   }
 
@@ -715,7 +714,7 @@ html {
     background: #006072;
 
     .text-color {
-      color: #fff;
+      color: #fff !important;
     }
   }
 
@@ -723,7 +722,7 @@ html {
     background: #00BBB4;
 
     .text-color {
-      color: #fff;
+      color: #fff !important;
     }
   }
 
@@ -731,7 +730,7 @@ html {
     background: #69C2C0;
 
     .text-color {
-      color: #0A1F16;
+      color: #0A1F16 !important;
     }
   }
 
@@ -739,7 +738,7 @@ html {
     background: #A0D9D9;
 
     .text-color {
-      color: #0A1F16;
+      color: #0A1F16 !important;
     }
   }
 
@@ -747,7 +746,7 @@ html {
     background: #004D41;
 
     .text-color {
-      color: #fff;
+      color: #fff !important;
     }
   }
 
@@ -755,7 +754,7 @@ html {
     background: #006A5B;
 
     .text-color {
-      color: #fff;
+      color: #fff !important;
     }
   }
 
@@ -763,7 +762,7 @@ html {
     background: #2E9970;
 
     .text-color {
-      color: #fff;
+      color: #fff !important;
     }
   }
 
@@ -771,7 +770,7 @@ html {
     background: #76B891;
 
     .text-color {
-      color: #0A1F16;
+      color: #0A1F16 !important;
     }
   }
 
@@ -779,7 +778,7 @@ html {
     background: #AADA91;
 
     .text-color {
-      color: #0A1F16;
+      color: #0A1F16 !important;
     }
   }
 
@@ -787,7 +786,7 @@ html {
     background: #1A5632;
 
     .text-color {
-      color: #fff;
+      color: #fff !important;
     }
   }
 
@@ -795,7 +794,7 @@ html {
     background: #3F873F;
 
     .text-color {
-      color: #fff;
+      color: #fff !important;
     }
   }
 
@@ -803,7 +802,7 @@ html {
     background: #7FC844;
 
     .text-color {
-      color: #0A1F16;
+      color: #0A1F16 !important;
     }
   }
 
@@ -811,7 +810,7 @@ html {
     background: #BED630;
 
     .text-color {
-      color: #0A1F16;
+      color: #0A1F16 !important;
     }
   }
 
@@ -819,7 +818,7 @@ html {
     background: #D8DD57;
 
     .text-color {
-      color: #0A1F16;
+      color: #0A1F16 !important;
     }
   }
 
@@ -827,7 +826,7 @@ html {
     background: #88171A;
 
     .text-color {
-      color: #fff;
+      color: #fff !important;
     }
   }
 
@@ -835,7 +834,7 @@ html {
     background: #EA0029;
 
     .text-color {
-      color: #fff;
+      color: #fff !important;
     }
   }
 
@@ -843,7 +842,7 @@ html {
     background: #FF4D00;
 
     .text-color {
-      color: #fff;
+      color: #fff !important;
     }
   }
 
@@ -851,7 +850,7 @@ html {
     background: #FF9015;
 
     .text-color {
-      color: #0A1F16;
+      color: #0A1F16 !important;
     }
   }
 
@@ -859,7 +858,7 @@ html {
     background: #FCBF90;
 
     .text-color {
-      color: #0A1F16;
+      color: #0A1F16 !important;
     }
   }
 
@@ -867,7 +866,7 @@ html {
     background: #3C2419;
 
     .text-color {
-      color: #fff;
+      color: #fff !important;
     }
   }
 
@@ -875,7 +874,7 @@ html {
     background: #503629;
 
     .text-color {
-      color: #fff;
+      color: #fff !important;
     }
   }
 
@@ -883,7 +882,7 @@ html {
     background: #804C3B;
 
     .text-color {
-      color: #fff;
+      color: #fff !important;
     }
   }
 
@@ -891,7 +890,7 @@ html {
     background: #95785E;
 
     .text-color {
-      color: #fff;
+      color: #fff !important;
     }
   }
 
@@ -899,7 +898,7 @@ html {
     background: #D9C79E;
 
     .text-color {
-      color: #0A1F16;
+      color: #0A1F16 !important;
     }
   }
 
