--- a/tailwindcss-styles/style.css
+++ b/tailwindcss-styles/style.css
@@ -2086,6 +2086,9 @@ video {
 .pr-\[15px\] {
   padding-right: 15px;
 }
+.pr-\[16px\] {
+  padding-right: 16px;
+}
 .pt-1 {
   padding-top: 10px;
 }
